[Spec Kit] Implement 030 server-subnet-announce
